Fixed spacing.

--- a/docker/web/static/style.css
+++ b/docker/web/static/style.css
@@ -6,3 +6,7 @@ p.footer-text {
 .top-buffer {
     margin-top:20px;
 }
+
+.left-buffer {
+    margin-left: 20px;
+}
